; ModuleID = '/home/carl/AnghaBench/zfs/lib/libzfs/extr_libzfs_crypto.c_zfs_crypto_attempt_load_keys.c'
source_filename = "/home/carl/AnghaBench/zfs/lib/libzfs/extr_libzfs_crypto.c_zfs_crypto_attempt_load_keys.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i64, i32 }

@ZFS_TYPE_FILESYSTEM = common dso_local global i32 0, align 4
@ZFS_TYPE_VOLUME = common dso_local global i32 0, align 4
@ENOENT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"%llu / %llu keys successfully loaded\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zfs_crypto_attempt_load_keys(i32* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_3__, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* null, i32** %7, align 8
  %9 = bitcast %struct.TYPE_3__* %8 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %9, i8 0, i64 24, i1 false)
  %10 = load i32*, i32** %4, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = load i32, i32* @ZFS_TYPE_FILESYSTEM, align 4
  %13 = load i32, i32* @ZFS_TYPE_VOLUME, align 4
  %14 = or i32 %12, %13
  %15 = call i32* @zfs_open(i32* %10, i8* %11, i32 %14)
  store i32* %15, i32** %7, align 8
  %16 = load i32*, i32** %7, align 8
  %17 = icmp eq i32* %16, null
  br i1 %17, label %18, label %20

18:                                               ; preds = %2
  %19 = load i32, i32* @ENOENT, align 4
  store i32 %19, i32* %6, align 4
  br label %46

20:                                               ; preds = %2
  %21 = load i32*, i32** %7, align 8
  %22 = call i32 @zfs_handle_dup(i32* %21)
  %23 = call i32 @load_keys_cb(i32 %22, %struct.TYPE_3__* %8)
  store i32 %23, i32* %6, align 4
  %24 = load i32, i32* %6, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %27

26:                                               ; preds = %20
  br label %46

27:                                               ; preds = %20
  %28 = call i8* @gettext(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 1
  %32 = load i64, i64* %31, align 8
  %33 = sub nsw i64 %30, %32
  %34 = trunc i64 %33 to i32
  %35 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %36 = load i64, i64* %35, align 8
  %37 = trunc i64 %36 to i32
  %38 = call i32 @printf(i8* %28, i32 %34, i32 %37)
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 1
  %40 = load i64, i64* %39, align 8
  %41 = icmp ne i64 %40, 0
  br i1 %41, label %42, label %43

42:                                               ; preds = %27
  store i32 -1, i32* %6, align 4
  br label %46

43:                                               ; preds = %27
  %44 = load i32*, i32** %7, align 8
  %45 = call i32 @zfs_close(i32* %44)
  store i32 0, i32* %3, align 4
  br label %54

46:                                               ; preds = %42, %26, %18
  %47 = load i32*, i32** %7, align 8
  %48 = icmp ne i32* %47, null
  br i1 %48, label %49, label %52

49:                                               ; preds = %46
  %50 = load i32*, i32** %7, align 8
  %51 = call i32 @zfs_close(i32* %50)
  br label %52

52:                                               ; preds = %49, %46
  %53 = load i32, i32* %6, align 4
  store i32 %53, i32* %3, align 4
  br label %54

54:                                               ; preds = %52, %43
  %55 = load i32, i32* %3, align 4
  ret i32 %55
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32* @zfs_open(i32*, i8*, i32) #2

declare dso_local i32 @load_keys_cb(i32, %struct.TYPE_3__*) #2

declare dso_local i32 @zfs_handle_dup(i32*) #2

declare dso_local i32 @printf(i8*, i32, i32) #2

declare dso_local i8* @gettext(i8*) #2

declare dso_local i32 @zfs_close(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
